--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,6 @@
 apply plugin: 'com.android.application'
 apply plugin: 'com.neenbedankt.android-apt'
+apply plugin: 'io.fabric'
 
 // loads variables from a file to `project` so they can be `safeGet`-ed later
 File secretPropsFile = file('../secret.properties')
@@ -38,9 +39,30 @@ Integer getBuildVersion(defaultVersion, Boolean increment = false) {
     currentCodeVersion as Integer
 }
 
+dependencies {
+    // Crashlytics Kit
+    compile('com.crashlytics.sdk.android:crashlytics:2.5.5@aar') {
+        transitive = true
+    }
+
+    // Twitter Kit
+    compile('com.twitter.sdk.android:twitter:1.11.0@aar') {
+        transitive = true
+    }
+
+    // Digits Kit
+    compile('com.digits.sdk.android:digits:1.9.2@aar') {
+        transitive = true
+    }
+
+    // MoPub Kit
+    compile('com.mopub.sdk.android:mopub:4.0.0@aar') {
+        transitive = true
+    }
+}
 android {
     compileSdkVersion 23
-    buildToolsVersion "23.0.1"
+    buildToolsVersion '23.0.2'
 
     signingConfigs {
         release {
@@ -135,6 +157,9 @@ dependencies {
     compile 'jp.wasabeef:recyclerview-animators:2.1.0'
     compile 'me.tatarka:auto-parcel-gson:0.1'
     apt 'me.tatarka:auto-parcel-gson-processor:0.1'
+
+    compile 'com.hannesdorfmann.fragmentargs:annotation:3.0.0'
+    apt 'com.hannesdorfmann.fragmentargs:processor:3.0.0'
 }
 
 // attach new global property to the `project`. Will not override by default
