--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,17 +11,16 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".activity.SearchUserActivity"
-            android:label="@string/app_name"
-            android:windowSoftInputMode="adjustResize|stateHidden">
+            android:name=".activity.LoginActivity"
+            android:windowSoftInputMode="adjustPan"/>
+        <activity
+            android:name=".activity.MainActivity"
+            android:windowSoftInputMode="adjustPan">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
-
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:name=".activity.ProfileActivity"/>
-        <activity android:name=".activity.LoginActivity"/>
     </application>
 
 </manifest>
