--- a/circle.yml
+++ b/circle.yml
@@ -1,3 +1,9 @@
+machine:
+  pre:
+    - echo client_id=$CLIENT_ID > secret.properties
+    - echo redirect_uri=$REDIRECT_URI >> secret.properties
+    - echo apiSecret=$FABRIC_API_SECRET > app/fabric.properties
+    - echo apiKey=$FABRIC_API_KEY >> app/fabric.properties
 dependencies:
   pre:
     - echo y | android update sdk --no-ui --all --filter "tools"
