added xml test reports to circle.yml

--- a/circle.yml
+++ b/circle.yml
@@ -6,3 +6,8 @@ dependencies:
     - echo apiKey=$FABRIC_API_KEY >> app/fabric.properties
     - echo y | android update sdk --no-ui --all --filter "tools"
     - echo y | android update sdk --no-ui --all --filter "build-tools-23.0.2"
+
+test:
+  post:
+    - mkdir -p $CIRCLE_TEST_REPORTS/junit/
+    - find . -type f -regex ".*/target/surefire-reports/.*xml" -exec cp {} $CIRCLE_TEST_REPORTS/junit/ \;
